--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: contractor_list
 version: 0.0.1
-description: Список подрядчиков
+description: List of contrctors
 author: yamal lng
 homepage: http://yamallng.ru/
 
